# iQ-VLM-DEMO

./: .gitignore  LICENSE  READMD.md  README.md  pyproject.toml  requirements.txt  webcam.py  webcam_desktop.py
docker/: Dockerfile  DockerfileUbuntu  env.sh  run.sh
resources/: llm_prompt.txt  vlm_prompt.txt  vlm_short_prompt.txt  vlm_story_prompt.txt
